2012-04-24  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent: Merged from 4.0 branch. Leave the secondary server
	  password empty by default. Fixes bug #3519520.

2012-04-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent_installer: Removed an unused variable.

2012-04-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent_installer: Backup and restore conf file and daemon
	  launcher. Moved the code that sets PANDORA_USER back to its original
	  place and set the variable properly instead.

2012-04-19  Koichiro Kikuchi  <koichiro@rworks.jp>

	* pandora_agent: Also added the temporal directory to the file path
	 for symlink check.

2012-04-18  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent: Add the temporal directory to the file path before
	  trying to send a buffered XML file.

2012-03-28  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent_installer: Moved the code that sets PANDORA_USER to
	  the right place.

2012-03-02  Koichiro Kikuchi  <koichiro@rworks.jp>

	* pandora_agent: Fixed bug of my previous commit (removed "qw").

2012-03-01  Koichiro Kikuchi  <koichiro@rworks.jp>

	* pandora_agent: Added symlink checks for temporary files before writing
	 them to avoid symlink attacks.

2012-02-29  Ramon Novoa  <rnovoa@artica.es>

	* Linux/pandora_agent.conf: Added a warning text. Thanks to Koichiro.

2012-02-28  Ramon Novoa  <rnovoa@artica.es>

	* Linux/pandora_agent.conf,
	  pandora_agent: Added support for xml_buffer.

2012-02-23  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent: Set the intensive interval before reading modules.

2012-02-10  Hirofumi Kosaka <kosaka@rworks.jp>

	* pandora_agent: Allow filename wildcards to specify
	additional configuration files.

2012-01-03  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent: Added support for intensive modules.

2011-12-19  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent: Merged from 4.0 branch. Empty the broker PID array.

2011-12-19  Ramon Novoa  <rnovoa@artica.es>
